--- a/styles.css
+++ b/styles.css
@@ -17,14 +17,15 @@ body {
     left: 0;
     bottom: 0;
     right: 0;
-    min-width: 100%;
-    min-height: 100%;
+    min-width: 100vh;
+    min-height: 100vh;
+    align-content: center;
 }
 
 h1 {
     color: white;
     text-align: center;
-    margin-bottom: 40px;
+    margin: 40px;
     font-size: 2.5em;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
@@ -40,7 +41,13 @@ h1 {
     border-radius: 12px;
     align-items: center;
     align-content: baseline;
-    height: 100%;
+    /*! height: 100%; */
+}
+
+.timeline-season {
+    display: flex;
+    align-items: center;
+    align-content: baseline;
 }
 
 .timeline::-webkit-scrollbar {
