--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,6 @@ h1 {
     font-size: 3rem;
     position: sticky;
     left: 0;
-    bottom: 1%;
     top: auto;
     width: 0;
     min-width: 0;
@@ -74,7 +73,10 @@ h1 {
     padding: 0px;
     align-self: flex-end;
     pointer-events: none;
-    transform: scale(1.3, 2.0);
+    transform-origin: bottom left;
+    transform: scale(1.5, 4.0);
+    color:rgba(0, 0, 0, 0.5);
+    margin-bottom: -3vh;
 }
 
 .timeline::-webkit-scrollbar {
